- Opencv and examples from https://www.baeldung.com/java-opencv added.

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    
+    implementation 'org.openpnp:opencv:4.5.1-2'
 }
 
 test {
